--- a/sites/all/modules/contrib/messaging/CHANGELOG.txt
+++ b/sites/all/modules/contrib/messaging/CHANGELOG.txt
@@ -1,5 +1,14 @@
-// $Id: CHANGELOG.txt,v 1.1.2.8.2.29.2.11 2009/06/22 10:05:18 jareyero Exp $
+// $Id: CHANGELOG.txt,v 1.1.2.8.2.29.2.14 2009/11/13 19:07:10 jareyero Exp $
 
+6.x-2.1 to 6.x-2.2
+-------------------------
+- Fixed: removed no caching for filters, #577418
+- Fixed: 'aftersend' typo by batje, #508054 
+- Added line break default filter on install, by aaronbauman, #516012
+- PHPMailer: Added support for libraries API, by markus_petrux, #541938
+- Fixed issue with sms sending, #407524
+- Strenghtening message filtering, better description, #546116
+ 
 6.x-2.0 to 6.x-2.1
 --------------------------
 - Fixed: outdated permission in privatemsg module, by askibinski, #491364
