--- a/sites/all/modules/contrib/notifications/CHANGELOG.txt
+++ b/sites/all/modules/contrib/notifications/CHANGELOG.txt
@@ -1,6 +1,23 @@
-// $Id: CHANGELOG.txt,v 1.1.2.11.2.51.2.19 2009/06/16 15:23:09 jareyero Exp $
+// $Id: CHANGELOG.txt,v 1.1.2.11.2.51.2.26 2009/11/13 19:00:10 jareyero Exp $
 
-6.x-2.0 to .......
+6.x-2.1 to 6.x-2.2
+------------------------------
+- Fixed: Wrong placeholders in subscriptions fieldset title, #513854
+- Usability improvements for 'manage subscriptions' filters, #455230
+- Fixed: Orphaned subscriptions not updated when deleting send intervals, #483488
+- Fixed: Performance issue with user threads page, left over CAST, #517966
+- Fixed: Checkbox for skip notifications showing up for disabled events, #626708
+- Fixed: Notifications sent for deleted comments, by Scott Reynolds, #593218
+- Added wrapper for i18n custom string translations, by aufumy, #606862
+- Notifications UI: Added support for multiple forms in the same page, by bdurbin, #526924
+- Fixed: Bug (typo) in notifications_load_user(), by markus_petrux, #586174
+- Fixed: node autocomplete filtering issues, by DeFr, #519746
+- Removed php undefined variable notices, by eMPee584, #552788
+- Fixed: Wrong result with notifications_content_type_enabled('type'), #456424
+- Fixed: Content-type subscription settings inconsistencies, by David Goode, #520438
+- Fixed: notifications_views fixes to broken handlers, by David Goode
+
+6.x-2.0 to 6.x-2.1
 -------------------------------
 - Extended field value and formatting callbacks (cck support), by David Goode, #329516
 - Fixed word "undisclose" and other string issues, #451932, #452102
